--- a/MvvmCross.Forms.Presenter.Droid/packages.config
+++ b/MvvmCross.Forms.Presenter.Droid/packages.config
@@ -3,11 +3,13 @@
   <package id="MvvmCross.Binding" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.0.1.3" targetFramework="monoandroid50" />
-  <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.3.0.38-pre2" targetFramework="monoandroid60" />
 </packages>
