--- a/MvvmCross.Forms.Presenter.Windows8.1/MvvmCross.Forms.Presenter.Windows81.csproj
+++ b/MvvmCross.Forms.Presenter.Windows8.1/MvvmCross.Forms.Presenter.Windows81.csproj
@@ -144,19 +144,19 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\win81\Xamarin.Forms.Core.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.2.3.0.38-pre2\lib\win81\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Platform">
-      <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\win81\Xamarin.Forms.Platform.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.2.3.0.38-pre2\lib\win81\Xamarin.Forms.Platform.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Platform.WinRT">
-      <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\win81\Xamarin.Forms.Platform.WinRT.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.2.3.0.38-pre2\lib\win81\Xamarin.Forms.Platform.WinRT.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Platform.WinRT.Tablet">
-      <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\win81\Xamarin.Forms.Platform.WinRT.Tablet.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.2.3.0.38-pre2\lib\win81\Xamarin.Forms.Platform.WinRT.Tablet.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\win81\Xamarin.Forms.Xaml.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.2.3.0.38-pre2\lib\win81\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
