--- a/MvvmCross.Forms.Presenter.WindowsPhone/packages.config
+++ b/MvvmCross.Forms.Presenter.WindowsPhone/packages.config
@@ -4,5 +4,5 @@
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="wp8" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="wp8" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp8" />
-  <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="wp8" />
+  <package id="Xamarin.Forms" version="2.3.0.38-pre2" targetFramework="wp8" />
 </packages>
