--- a/MvvmCross.Forms.Presenter.WindowsUWP/project.json
+++ b/MvvmCross.Forms.Presenter.WindowsUWP/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "MvvmCross.Binding": "4.1.4",
     "MvvmCross.Core": "4.1.4",
     "MvvmCross.Platform": "4.1.4",
-    "Xamarin.Forms": "2.1.0.6529"
+    "Xamarin.Forms": "2.3.0.38-pre2"
   },
   "frameworks": {
     "uap10.0": {}
