--- a/MvvmCross.Forms.Presenter.iOS/packages.config
+++ b/MvvmCross.Forms.Presenter.iOS/packages.config
@@ -3,5 +3,5 @@
   <package id="MvvmCross.Binding" version="4.1.4" targetFramework="xamarinios10" />
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="xamarinios10" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.0.38-pre2" targetFramework="xamarinios10" />
 </packages>
