--- a/MvvmCross.Forms.Presenter.Droid/MvvmCross.Forms.Presenter.Droid.csproj
+++ b/MvvmCross.Forms.Presenter.Droid/MvvmCross.Forms.Presenter.Droid.csproj
@@ -75,6 +75,10 @@
       <HintPath>..\packages\MvvmCross.Platform.4.1.4\lib\MonoAndroid\MvvmCross.Platform.Droid.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
@@ -134,6 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MvxDroidFormsPagePresenter.cs" />
     <Compile Include="MvxFormsAppCompatActivity.cs" />
     <Compile Include="MvxDroidFormsPresenterProxy.cs" />
     <Compile Include="MvxFormsSplashScreenActivity.cs" />
