--- a/MvvmCross.Forms.Presenter.Droid/packages.config
+++ b/MvvmCross.Forms.Presenter.Droid/packages.config
@@ -3,6 +3,7 @@
   <package id="MvvmCross.Binding" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
