Implemented MvxFormsPresenterProxy for WinRT.

--- a/MvvmCross.Forms.Presenter.WinRTPhone/MvvmCross.Forms.Presenter.WinRTPhone.csproj
+++ b/MvvmCross.Forms.Presenter.WinRTPhone/MvvmCross.Forms.Presenter.WinRTPhone.csproj
@@ -82,6 +82,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="MvxFormsWindowsPhonePagePresenter.cs" />
+    <Compile Include="MvxWindowsFormsPresenterProxy.cs" />
     <Compile Include="MvxWindowsPhoneFormsPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
