--- a/MvvmCross.Forms.Presenter.iOS/MvvmCross.Forms.Presenter.iOS.csproj
+++ b/MvvmCross.Forms.Presenter.iOS/MvvmCross.Forms.Presenter.iOS.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="MvxFormsIosPagePresenter.cs" />
+    <Compile Include="MvxIosFormsPresenterProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
